Changelog for Yancy

{{ $NEXT }}

1.068     2020-12-19 16:33:19-06:00 America/Chicago

    [Fixed]

    - Added "deprecated" warnings to abstracts for deprecated modules.
      Thanks @mohawk2! (Github #121, #122)
    - Fixed session cookie being autovivified with empty data. Now the
      session cookie will only be sent to the client when they log in.
      This helps satisfy GDPR compliance. Thanks @uniejo for submitting
      this patch! (Github #128)
    - Fixed warnings thrown from JSON::Validator when "textarea" is
      used. Thanks @stephan48 for reporting this issue! (Github #127)

1.067     2020-11-15 22:39:19-06:00 America/Chicago

    [Fixed]

    - Prevent authentication return URL from redirecting somewhere
      offsite, which is a potential security risk:
      http://cwe.mitre.org/data/definitions/601.html
    - Fixed missing logs when an exception is caught. Thanks @stephan48
      for reporting this! [Github #126]
    - Fixed editor not displaying Internal Server Errors. It now
      displays an alert box with a button to show more details. Thanks
      @stephan48 for reporting this issue! [Github #127]

1.066     2020-08-07 19:45:13-05:00 America/Chicago

    [NOTE]

    - Yancy now scans your database schema by default. To disable this,
      add `read_schema => 0` to your Yancy plugin configuration.

    [Added]

    - Added push updates to the table component. This is still
      experimental, but it allows a table on a page to automatically
      update when data is changed.
    - Added an example application that uses the table component with
      push updates: The ETL Viewer.

    [Fixed]

    - Fixed query params not being passed through the table component.
      Now any search on the page will be shown in the table.

    - Rewrote the primary Yancy docs to emphasize drop-in administration
      of existing databases, Yancy's primary use-case.

1.065     2020-07-29 22:08:56-05:00 America/Chicago

    [Added]
