@@ -32,8 +32,8 @@ my %WriteMakefileArgs = (
     "Exporter" => 0,
     "File::Spec::Functions" => 0,
     "FindBin" => 0,
-    "JSON::Validator" => 4,
-    "Mojolicious" => "8.31",
+    "JSON::Validator" => "4.11",
+    "Mojolicious" => 9,
     "Mojolicious::Plugin::I18N" => "1.6",
     "Mojolicious::Plugin::OpenAPI" => "2.12",
     "Role::Tiny" => "2.000001",
@@ -67,8 +67,8 @@ my %FallbackPrereqs = (
   "FindBin" => 0,
   "IO::Handle" => 0,
   "IPC::Open3" => 0,
-  "JSON::Validator" => 4,
-  "Mojolicious" => "8.31",
+  "JSON::Validator" => "4.11",
+  "Mojolicious" => 9,
   "Mojolicious::Plugin::I18N" => "1.6",
   "Mojolicious::Plugin::OpenAPI" => "2.12",
   "Role::Tiny" => "2.000001",
