@@ -3,8 +3,8 @@ requires "Digest" => "0";
 requires "Exporter" => "0";
 requires "File::Spec::Functions" => "0";
 requires "FindBin" => "0";
-requires "JSON::Validator" => "4";
-requires "Mojolicious" => "8.31";
+requires "JSON::Validator" => "4.11";
+requires "Mojolicious" => "9";
 requires "Mojolicious::Plugin::I18N" => "1.6";
 requires "Mojolicious::Plugin::OpenAPI" => "2.12";
 requires "Role::Tiny" => "2.000001";
