@@ -2,6 +2,11 @@ Changelog for Yancy
 
 {{ $NEXT }}
 
+    [Fixed]
+
+    - Fixed compatibility with Mojolicious 9 and JSON::Validator 4.
+      Thanks @mjaix for reporting this issue!
+
 1.068     2020-12-19 16:33:19-06:00 America/Chicago
 
     [Fixed]
